--- a/arch/avr32/Kconfig
+++ b/arch/avr32/Kconfig
@@ -9,6 +9,7 @@ config AVR32
 	select ARCH_HAVE_NMI_SAFE_CMPXCHG
 	select HAVE_GENERIC_HARDIRQS
 	select GENERIC_IRQ_PROBE
+	select GENERIC_ATOMIC64
 	select HARDIRQS_SW_RESEND
 	select GENERIC_IRQ_SHOW
 	help
