--- a/init/Kconfig
+++ b/init/Kconfig
@@ -41,7 +41,7 @@ config SCHED_BFS
           TEST so these options are disabled.
 
           Say Y here.
-	default n
+	default y
 
 config EXPERIMENTAL
 	bool "Prompt for development and/or incomplete code/drivers"
