--- a/arch/arm/configs/aries_galaxysmtd_defconfig
+++ b/arch/arm/configs/aries_galaxysmtd_defconfig
@@ -1,8 +1,7 @@
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_EXPERIMENTAL=y
-# CONFIG_KERNEL_LZMA is not set
+CONFIG_KERNEL_LZMA=y
 CONFIG_SWAP=y
-CONFIG_KERNEL_XZ=y
 CONFIG_SYSVIPC=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_KALLSYMS_ALL=y
