adaptive nohz: Prepare a config option for the full adaptive nohz feature. This way we can start to put the related code under appropriate ifdefs.

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -181,4 +181,13 @@ config ARCH_HAVE_NMI_SAFE_CMPXCHG
 config HAVE_RCU_TABLE_FREE
 	bool
 
+config HAVE_NO_HZ_FULL
+        bool
+	help
+	 An arch should select this symbols if it provides
+	 the kernel entry/exit hooks necessary to implement
+	 full tickless support. This includes syscall entry/exit,
+	 exceptions entry/exit and do_notify_resume() hooks.
+
+
 source "kernel/gcov/Kconfig"
