testing: config_no_hz

--- a/arch/arm/configs/aries_galaxysmtd_defconfig
+++ b/arch/arm/configs/aries_galaxysmtd_defconfig
@@ -547,3 +547,4 @@ CONFIG_CRYPTO=y
 CONFIG_GENERIC_STRNCPY_FROM_USER=y
 CONFIG_GENERIC_STRNLEN_USER=y
 # CONFIG_HAS_BROKEN_SD is not set
+CONFIG_NO_HZ=y
