--- a/kernel/time/Kconfig
+++ b/kernel/time/Kconfig
@@ -5,19 +5,13 @@ config TICK_ONESHOT
 	bool
 
 config NO_HZ
-	bool "Tickless idle system (Dynamic idle Ticks)"
+	bool "Tickless System (Dynamic Ticks)"
 	depends on !ARCH_USES_GETTIMEOFFSET && GENERIC_CLOCKEVENTS
 	select TICK_ONESHOT
 	help
-	  This option enables a tickless idle system: timer interrupts will
-	  only trigger on an as-needed basis when the system is idle.
-
-config NO_HZ_FULL
-        bool "Full tickless system (Dynamic Ticks)"
-	depends on NO_HZ && HAVE_NO_HZ_FULL
-	help
-	  This option enables a full adaptive tickless system: timer
-	  interrupts will globally only trigger on an as-needed basis.
+	  This option enables a tickless system: timer interrupts will
+	  only trigger on an as-needed basis both when the system is
+	  busy and when the system is idle.
 
 config HIGH_RES_TIMERS
 	bool "High Resolution Timer Support"
