--- a/usr/fascinatemtd_initramfs/ics_init/init.rc
+++ b/usr/fascinatemtd_initramfs/ics_init/init.rc
@@ -541,6 +541,9 @@ on property:sys.shutdown.requested=0
     start shutdown_misc
 
 # reboot
+on property:sys.shutdown.requested=1null
+    start shutdown_misc
+
 on property:sys.shutdown.requested=1
     start shutdown_misc
 
