--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -298,7 +298,7 @@ config PM_RUNTIME_CLK
 
 config SUSPEND_TIME
 	bool "Log time spent in suspend"
-	default y
+	default n
 	---help---
 	  Prints the time spent in suspend in the kernel log, and
 	  keeps statistics on the time spent in suspend in
