--- a/usr/vibrantmtd_initramfs/ics_init/init.rc
+++ b/usr/vibrantmtd_initramfs/ics_init/init.rc
@@ -68,6 +68,9 @@ loglevel 3
     write /proc/sys/kernel/sched_wakeup_granularity_ns 2000000
     write /proc/sys/kernel/sched_compat_yield 1
     write /proc/sys/kernel/sched_child_runs_first 0
+if [ -e "/system/vendor/bin/samsung-gpsd" ]; then
+    echo 2 > /proc/sys/kernel/randomize_va_space
+fi
 
 # Create cgroup mount points for process groups
     mkdir /dev/cpuctl
