--- a/drivers/net/wireless/bcmdhd/Kconfig
+++ b/drivers/net/wireless/bcmdhd/Kconfig
@@ -35,20 +35,20 @@ config BCMDHD_WEXT
 config DHD_USE_STATIC_BUF
 	bool "Enable memory preallocation"
 	depends on BCMDHD
-	default y
+	default n
 	---help---
 	  Use memory preallocated in platform
 
 config DHD_USE_SCHED_SCAN
 	bool "Use CFG80211 sched scan"
 	depends on BCMDHD && CFG80211
-	default y
+	default n
 	---help---
 	  Use CFG80211 sched scan
 
 config DHD_ENABLE_P2P
 	bool "Enable Wifi Direct"
 	depends on BCMDHD && CFG80211
-	default y
+	default n
 	---help---
 	  Use Enable Wifi Direct
