--- a/drivers/misc/samsung_modemctl/Makefile
+++ b/drivers/misc/samsung_modemctl/Makefile
@@ -1,2 +1,7 @@
-all:
-	cp built-in.o.gcc4.4.3 built-in.o
+subdir-ccflags-y := -Os
+
+obj-$(CONFIG_PHONE_ARIES)	+= modemctl/
+obj-$(CONFIG_PHONE_ARIES)	+= onedram/
+obj-$(CONFIG_PHONE_ARIES)	+= svnet/
+obj-$(CONFIG_PHONE_ARIES_CDMA)	+= dpram/
+obj-$(CONFIG_PHONE_CRESPO)	+= modem_ctl.o modem_io.o modem_dbg.o
