--- a/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
@@ -3,20 +3,16 @@ import init.aries.gps.rc
 
 on init
     loglevel 9
-    export EXTERNAL_STORAGE /storage/sdcard0
-    export SECONDARY_STORAGE /storage/sdcard1
+    export EXTERNAL_STORAGE /mnt/sdcard
+    export SECONDARY_STORAGE /mnt/emmc
 
     # FIXME: Market checks this variable for space-checking, but downloads to /datadata
     export DOWNLOAD_CACHE /data/download
 
-    mkdir /storage 0050 system sdcard_r
-    mkdir /storage/sdcard0 0000 system system
-    mkdir /storage/sdcard1 0000 system system
-    symlink /storage/sdcard0 /sdcard
-    symlink /storage/sdcard0 /mnt/sdcard
-    symlink /storage/sdcard1 /emmc
-    symlink /storage/sdcard1 /mnt/emmc
-    # FIXME: Remove emmc?
+    mkdir /mnt/emmc 0000 system system
+    symlink /mnt/emmc /emmc
+    mkdir /mnt/sdcard 0000 system system
+    symlink /mnt/sdcard /sdcard
     mkdir /datadata 0771 system system
 
     # We will create our own ril-daemon service in class 'core' because the
@@ -30,6 +26,8 @@ on boot
     setprop ro.product.device aries
     setprop ro.radio.noril yes
 
+    setprop ro.crypto.keyfile.userdata /efs/userdata_footer
+
 # fake some battery state
     setprop status.battery.state Slow
     setprop status.battery.level 5
@@ -42,7 +40,7 @@ on boot
 on fs
     mkdir /radio 0775 radio radio
     mount yaffs2 mtd@radio /radio
-    mount_all fstab.aries
+    mount ext4 /dev/block/mmcblk0p2 /data wait nosuid nodev noatime nodiratime noauto_da_alloc
     mount yaffs2 mtd@datadata /datadata
 
     chown radio radio /radio/modem.bin
@@ -98,10 +96,6 @@ on post-fs-data
     # download cache
     mkdir /data/download 0770 system cache
 
-    # logs
-    mkdir /data/log 0775 root root
-    chmod 0775 /data/log
-
     setprop vold.post_fs_data_done 1
 
 service aries-ril-daemon /system/bin/rild
@@ -118,42 +112,14 @@ service pvrsrvinit /system/vendor/bin/pvrsrvinit
     group root
     oneshot
 
-# FIXME
-# service p2p_supplicant /system/bin/wpa_supplicant \
-#   -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
-#   -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
-#   #   we will start as root and wpa_supplicant will switch to user wifi
-#   #   after setting up the capabilities required for WEXT
-#   #   user wifi
-#   #   group wifi inet keystore
-#   class main
-#   socket wpa_wlan0 dgram 660 wifi wifi
-#   disabled
-#   oneshot
-
-service p2p_supplicant /system/bin/wpa_supplicant \
-	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
-	#   we will start as root and wpa_supplicant will switch to user wifi
-	#   after setting up the capabilities required for WEXT
-	#   user wifi
-	#   group wifi inet keystore
-	class main
-	socket wpa_wlan0 dgram 660 wifi wifi
-	disabled
-	oneshot
-
 service wpa_supplicant /system/bin/wpa_supplicant \
-	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
-	#   we will start as root and wpa_supplicant will switch to user wifi
-	#   after setting up the capabilities required for WEXT
-	#   user wifi
-	#   group wifi inet keystore
-	class main
-	socket wpa_wlan0 dgram 660 wifi wifi
-	disabled
-	oneshot
+		-Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin
+    class main
+    socket wpa_wlan0 dgram 0660 wifi wifi
+    disabled
+    oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -aABKL
+service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     class main
     disabled
     oneshot
@@ -222,8 +188,6 @@ service tvout /system/bin/tvoutserver
     class late_start
     user system
     group graphics
-    disabled
-# FIXME (disabled): ABI borked
 
 service tvouthack /system/bin/tvouthack
     user system
