--- a/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
@@ -26,8 +26,6 @@ on boot
     setprop ro.product.device aries
     setprop ro.radio.noril yes
 
-    setprop ro.crypto.keyfile.userdata /efs/userdata_footer
-
 # fake some battery state
     setprop status.battery.state Slow
     setprop status.battery.level 5
@@ -96,6 +94,10 @@ on post-fs-data
     # download cache
     mkdir /data/download 0770 system cache
 
+    # logs
+    mkdir /data/log 0775 root root
+    chmod 0775 /data/log
+
     setprop vold.post_fs_data_done 1
 
 service aries-ril-daemon /system/bin/rild
@@ -112,14 +114,42 @@ service pvrsrvinit /system/vendor/bin/pvrsrvinit
     group root
     oneshot
 
-service wpa_supplicant /system/bin/wpa_supplicant \
-		-Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin
-    class main
-    socket wpa_wlan0 dgram 0660 wifi wifi
-    disabled
-    oneshot
+# FIXME
+# service p2p_supplicant /system/bin/wpa_supplicant \
+#   -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
+#   -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
+#   #   we will start as root and wpa_supplicant will switch to user wifi
+#   #   after setting up the capabilities required for WEXT
+#   #   user wifi
+#   #   group wifi inet keystore
+#   class main
+#   socket wpa_wlan0 dgram 660 wifi wifi
+#   disabled
+#   oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
+service p2p_supplicant /system/bin/wpa_supplicant \
+	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
+	#   we will start as root and wpa_supplicant will switch to user wifi
+	#   after setting up the capabilities required for WEXT
+	#   user wifi
+	#   group wifi inet keystore
+	class main
+	socket wpa_wlan0 dgram 660 wifi wifi
+	disabled
+	oneshot
+
+service wpa_supplicant /system/bin/wpa_supplicant \
+	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
+	#   we will start as root and wpa_supplicant will switch to user wifi
+	#   after setting up the capabilities required for WEXT
+	#   user wifi
+	#   group wifi inet keystore
+	class main
+	socket wpa_wlan0 dgram 660 wifi wifi
+	disabled
+	oneshot
+
+service dhcpcd_wlan0 /system/bin/dhcpcd -aABKL
     class main
     disabled
     oneshot
@@ -188,6 +218,8 @@ service tvout /system/bin/tvoutserver
     class late_start
     user system
     group graphics
+    disabled
+# FIXME (disabled): ABI borked
 
 service tvouthack /system/bin/tvouthack
     user system
