--- a/usr/galaxysmtd_initramfs/jb_init/ueventd.rc
+++ b/usr/galaxysmtd_initramfs/jb_init/ueventd.rc
@@ -8,9 +8,8 @@
 /dev/ashmem               0666   root       root
 /dev/binder               0666   root       root
 
-# Anyone can read the logs, but if they're not in the "logs"
-# group, then they'll only see log entries for their UID.
-/dev/log/*                0666   root       log
+# logger should be world writable (for logging) but not readable
+/dev/log/*                0662   root       log
 
 # the msm hw3d client device node is world writable/readable.
 /dev/msm_hw3dc            0666   root       root
@@ -39,7 +38,7 @@
 /dev/adsp/*               0660   system     audio
 /dev/snd/*                0660   system     audio
 /dev/mt9t013              0660   system     system
-/dev/msm_camera/*         0660   system     system
+/dev/msm_camera/*         0660   system     camera
 /dev/akm8976_daemon       0640   compass    system
 /dev/akm8976_aot          0640   compass    system
 /dev/akm8973_daemon       0640   compass    system
