--- a/usr/galaxysmtd_initramfs/ics_init/ueventd.aries.rc
+++ b/usr/galaxysmtd_initramfs/ics_init/ueventd.aries.rc
@@ -36,3 +36,6 @@
 
 # for FM Radio
 /dev/radio0               0666   system     audio
+
+# for Wifi
+/dev/rfkill               0660   wifi       wifi
