--- a/arch/arm/configs/aries_galaxysmtd_defconfig
+++ b/arch/arm/configs/aries_galaxysmtd_defconfig
@@ -6,7 +6,7 @@ CONFIG_KERNEL_XZ=y
 CONFIG_SYSVIPC=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_KALLSYMS_ALL=y
-# CONFIG_PERF_EVENTS is not set
+# CONFIG_PERF_COUNTERS is not set
 # CONFIG_PROFILING is not set
 CONFIG_OPROFILE=y
 CONFIG_MODULES=y
@@ -27,6 +27,7 @@ CONFIG_FIQ_DEBUGGER_CONSOLE=y
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_COMPACTION=y
+CONFIG_KSM=y
 CONFIG_CMDLINE="console=ttyFIQ0,115200 init=/init"
 
 #
@@ -131,6 +132,7 @@ CONFIG_APM_EMULATION=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
+CONFIG_XFRM_USER=y
 CONFIG_NET_KEY=y
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
@@ -167,6 +169,7 @@ CONFIG_NF_CT_NETLINK=y
 CONFIG_NETFILTER_TPROXY=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
+CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
@@ -384,6 +387,7 @@ CONFIG_PVR_SGX=y
 # CONFIG_PVR_NEED_PVR_DPF is not set
 # CONFIG_PVR_NEED_PVR_ASSERT is not set
 CONFIG_PVR_USSE_EDM_STATUS_DEBUG=y
+CONFIG_PVR_LINUX_MEM_AREA_POOL=y
 CONFIG_RADIO_SI4709=y
 CONFIG_FB=y
 CONFIG_FB_S3C=y
@@ -504,11 +508,12 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=m
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_DEBUG_INFO=y
 CONFIG_SYSCTL_SYSCALL_CHECK=y
+CONFIG_SCHED_TRACER=y
+CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_ARM_UNWIND is not set
 CONFIG_DEBUG_USER=y
 CONFIG_DEBUG_S3C_UART=2
