workaroud to get tvout server working

--- a/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
@@ -233,3 +233,6 @@ service tvouthack /system/bin/tvouthack
     user system
     group graphics
     disabled
+
+on property:dev.bootcomplete=1
+	start tvout
