--- a/usr/vibrantmtd_initramfs/ics_init/init.rc
+++ b/usr/vibrantmtd_initramfs/ics_init/init.rc
@@ -297,7 +297,7 @@ on boot
     setprop system_init.startsurfaceflinger 0
 
 # Run sysinit
-    exec /system/bin/sysinit
+#    exec /system/bin/sysinit
 
     class_start core
     class_start main
