--- a/usr/galaxysbmtd_initramfs/ics_init/init.rc
+++ b/usr/galaxysbmtd_initramfs/ics_init/init.rc
@@ -298,7 +298,7 @@ on boot
     setprop system_init.startsurfaceflinger 0
 
 # Run sysinit
-    exec /system/bin/sysinit
+#    exec /system/bin/sysinit
 
     class_start core
     class_start main
@@ -455,7 +455,7 @@ service surfaceflinger /system/bin/surfaceflinger
 
 service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-system-server
     class main
-    socket zygote stream 666
+    socket zygote stream 660 root system
     onrestart write /sys/android_power/request_state wake
     onrestart write /sys/power/state on
     onrestart restart media
