--- a/arch/arm/configs/aries_galaxysbmtd_defconfig
+++ b/arch/arm/configs/aries_galaxysbmtd_defconfig
@@ -27,7 +27,7 @@ CONFIG_FIQ_DEBUGGER_CONSOLE=y
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_COMPACTION=y
-CONFIG_KSM=y
+# CONFIG_KSM is not set
 CONFIG_CMDLINE="console=ttyFIQ0,115200 init=/init"
 
 #
