--- a/usr/galaxysmtd_initramfs/ics_rec_init/init.rc
+++ b/usr/galaxysmtd_initramfs/ics_rec_init/init.rc
@@ -102,7 +102,7 @@ loglevel 9
 on fs
 # mount mtd partitions
     # Mount /system rw first to give the filesystem a chance to save a checkpoint
-    mount yaffs2 mtd@system /system
+    #mount yaffs2 mtd@system /system
     #mount yaffs2 mtd@cache /cache
     #mount ext4 /dev/block/mmcblk0p2 /data nosuid nodev noatime nodiratime noauto_da_alloc
     #mount yaffs2 mtd@datadata /datadata
@@ -253,6 +253,22 @@ on boot
     umount /system
 
     class_start default
+
+# LVM: Wait for mmc block devices to become available, then set up LVM volumes
+    wait /dev/block/mmcblk0
+    start lvm_vgscan
+    start lvm_vgchange
+
+# LVM services
+# Scan for LVM physical volumes and set up volume groups
+service lvm_vgscan /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    disabled
+    oneshot
+
+# Activate LVM logical volumes in found volume groups
+service lvm_vgchange /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+    disabled
+    oneshot
 
 ## Daemon processes to be run by init.
 ##
