--- a/usr/galaxysbmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/galaxysbmtd_initramfs/jb_init/init.aries.rc
@@ -17,6 +17,7 @@ on init
     symlink /storage/sdcard1 /emmc
     symlink /storage/sdcard1 /mnt/emmc
     # FIXME: Remove emmc?
+    mkdir /datadata 0771 system system
 
     # Increase read ahead on moviNAND
     write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
@@ -42,9 +43,10 @@ on boot
     setprop ro.telephony.call_ring.multiple 0
 
 on fs
+
     mkdir /radio 0775 radio radio
     mount yaffs2 mtd@radio /radio
-    mount_all fstab.aries
+    mount yaffs2 mtd@datadata /datadata
 
     chown radio radio /radio/modem.bin
 
@@ -54,6 +56,15 @@ on fs
     chown radio radio /efs
     chmod 770 /efs/bluetooth
     chmod 770 /efs/imei
+
+# LVM: Wait for mmc block devices to become available, then set up LVM volumes
+    wait /dev/block/mmcblk0
+    start lvm_vgscan
+    start lvm_vgchange
+
+# LVM: Mount volumes once they become available
+    mount ext4 /dev/lvpool/system /system wait ro
+    mount ext4 /dev/lvpool/userdata /data wait noatime nosuid nodev nomblk_io_submit
 
 # permissions for bluetooth.
     chown bluetooth bluetooth /dev/s3c2410_serial0
@@ -71,6 +82,10 @@ on fs
 
 on post-fs
 
+   # We chown/chmod /datadata again so because mount is run as root + defaults    
+    chown system system /datadata    
+    chmod 0771 /datadata
+
     #symlinks for samsung RIL
     symlink /radio/modem.bin /dev/block/bml12
 
@@ -83,18 +98,17 @@ on post-fs
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
 on post-fs-data
+	
+    # for migrating download provider's cache out of the small /data/data    
+    mkdir /data/data2 0771 system system   
+
+    # setup datadata    
+    exec /sbin/setupdatadata.sh
 
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
 
-    # Dalvik cache on /system to save space
-    mkdir /system/dalvik-cache 0771 system system
-    chown system system /system/dalvik-cache
-    chmod 0771 /system/dalvik-cache
-    exec /system/bin/rm -r /data/dalvik-cache
-    symlink /system/dalvik-cache /data/dalvik-cache
-	
     # download cache
     mkdir /data/download 0770 system cache
 
@@ -104,6 +118,18 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
+# LVM services
+# Scan for LVM physical volumes and set up volume groups
+service lvm_vgscan /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    class core
+    disabled
+    oneshot
+
+# Activate LVM logical volumes in found volume groups
+service lvm_vgchange /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+    class core
+    disabled
+    oneshot
 
 #boot-patch
 exec /sbin/boot-patch.sh
