--- a/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
@@ -17,13 +17,14 @@ on init
     symlink /storage/sdcard1 /emmc
     symlink /storage/sdcard1 /mnt/emmc
     # FIXME: Remove emmc?
+    mkdir /datadata 0771 system system
 
     # Increase read ahead on moviNAND
     write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
-	
+
     # Disable address randomization
     write /proc/sys/kernel/randomize_va_space 0
-	
+
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
     stop ril-daemon
@@ -47,7 +48,7 @@ on boot
 on fs
     mkdir /radio 0775 radio radio
     mount yaffs2 mtd@radio /radio
-    mount_all fstab.aries
+    mount yaffs2 mtd@datadata /datadata
 
     chown radio radio /radio/modem.bin
 
@@ -57,6 +58,15 @@ on fs
     chown radio radio /efs
     chmod 770 /efs/bluetooth
     chmod 770 /efs/imei
+
+# LVM: Wait for mmc block devices to become available, then set up LVM volumes
+    wait /dev/block/mmcblk0
+    start lvm_vgscan
+    start lvm_vgchange
+
+# LVM: Mount volumes once they become available
+    mount ext4 /dev/lvpool/system /system wait ro
+    mount ext4 /dev/lvpool/userdata /data wait noatime nosuid nodev nomblk_io_submit
 
 # permissions for bluetooth.
     chown bluetooth bluetooth /dev/s3c2410_serial0
@@ -74,6 +84,10 @@ on fs
 
 on post-fs
 
+   # We chown/chmod /datadata again so because mount is run as root + defaults    
+    chown system system /datadata    
+    chmod 0771 /datadata
+
     #symlinks for samsung RIL
     symlink /radio/modem.bin /dev/block/bml12
 
@@ -87,17 +101,16 @@ on post-fs
 
 on post-fs-data
 
+    # for migrating download provider's cache out of the small /data/data    
+    mkdir /data/data2 0771 system system   
+
+    # setup datadata    
+    exec /sbin/setupdatadata.sh
+
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
-	
-    # Dalvik cache on /system to save space
-    mkdir /system/dalvik-cache 0771 system system
-    chown system system /system/dalvik-cache
-    chmod 0771 /system/dalvik-cache
-    exec /system/bin/rm -r /data/dalvik-cache
-    symlink /system/dalvik-cache /data/dalvik-cache
-	
+
     # download cache
     mkdir /data/download 0770 system cache
 
@@ -106,6 +119,19 @@ on post-fs-data
     chmod 0775 /data/log
 
     setprop vold.post_fs_data_done 1
+
+# LVM services
+# Scan for LVM physical volumes and set up volume groups
+service lvm_vgscan /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    class core
+    disabled
+    oneshot
+
+# Activate LVM logical volumes in found volume groups
+service lvm_vgchange /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+    class core
+    disabled
+    oneshot
 
 #boot-patch
 exec /sbin/boot-patch.sh
