--- a/usr/galaxysbmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/galaxysbmtd_initramfs/jb_init/init.aries.rc
@@ -1,5 +1,5 @@
 import init.aries.usb.rc
-import init.aries.gps.rc
+#import init.aries.gps.rc
 
 on init
     loglevel 9
@@ -105,6 +105,15 @@ on post-fs-data
     # setup datadata    
     exec /sbin/setupdatadata.sh
 
+    #boot-patch
+    exec /sbin/boot-patch.sh
+
+    # create data/gps for GPS demon
+    mkdir /data/gps 700 gps system
+    chown gps system /data/gps
+    chown gps root /sys/class/sec/gps/GPS_PWR_EN/value
+    chmod 660 /sys/class/sec/gps/GPS_PWR_EN/value
+
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
@@ -131,9 +140,6 @@ service lvm_vgchange /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
     disabled
     oneshot
 
-#boot-patch
-exec /sbin/boot-patch.sh
-
 service aries-ril-daemon /system/bin/rild
     class core
     socket rild stream 660 root radio
@@ -141,12 +147,20 @@ service aries-ril-daemon /system/bin/rild
     user root
     group radio cache inet misc audio sdcard_rw log
 
+
 # 3D init
 service pvrsrvinit /system/vendor/bin/pvrsrvinit
     class core
     user root
     group root
     oneshot
+
+service gpsd /system/vendor/bin/gpsd -c /vendor/etc/gps.xml
+    class late_start
+    socket gps seqpacket 0660 gps system
+    user gps
+    group system inet
+    disabled
 
 # FIXME
 # service p2p_supplicant /system/bin/wpa_supplicant \
@@ -262,3 +276,4 @@ service tvouthack /system/bin/tvouthack
 
 on property:dev.bootcomplete=1
 	start tvout
+	start gpsd
