--- a/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
@@ -267,6 +267,7 @@ service geomagneticd /system/vendor/bin/geomagneticd
     class late_start
     user compass
     group system input
+    disabled
 
 service tvout /system/bin/tvoutserver
     class late_start
@@ -283,3 +284,4 @@ service tvouthack /system/bin/tvouthack
 on property:dev.bootcomplete=1
 	start tvout
 	start gpsd
+	start geomagneticd
