--- a/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
+++ b/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
@@ -1,16 +1,26 @@
 import init.aries.usb.rc
-
+import init.aries.gps.rc
 
 on init
     loglevel 9
     export EXTERNAL_STORAGE /storage/sdcard0
+    export SECONDARY_STORAGE /storage/sdcard1
+
     # FIXME: Market checks this variable for space-checking, but downloads to /datadata
     export DOWNLOAD_CACHE /data/download
 
     mkdir /storage 0050 system sdcard_r
     mkdir /storage/sdcard0 0000 system system
+    mkdir /storage/sdcard1 0000 system system
     symlink /storage/sdcard0 /sdcard
     symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/sdcard1 /emmc
+    symlink /storage/sdcard1 /mnt/emmc
+    # FIXME: Remove emmc?
+    mkdir /datadata 0771 system system
+
+    # Increase read ahead on moviNAND
+    write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
 
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
@@ -31,17 +41,21 @@ on boot
 
 # phone
     setprop ro.telephony.call_ring.multiple 0
-	
-
-on property:ril.cdma.data_state=1
-  restart pppd_cdma
-  
-on property:ril.cdma.data_state=0
-  stop pppd_cdma
 
 on fs
-    mount ext4 /dev/block/mmcblk0p1 /system ro noatime nodev nomblk_io_submit errors=panic wait
-    mount ext4 /dev/block/mmcblk0p2 /cache noatime nodev nosuid nomblk_io_submit errors=panic wait
+    mkdir /radio 0775 radio radio
+    mount yaffs2 mtd@radio /radio
+    mount_all fstab.aries
+    mount yaffs2 mtd@datadata /datadata
+
+    chown radio radio /radio/modem.bin
+
+# We chown/chmod /efs because mount is run as root + defaults
+    mkdir /efs 0775 radio radio
+    mount yaffs2 /dev/block/mtdblock4 /efs
+    chown radio radio /efs
+    chmod 770 /efs/bluetooth
+    chmod 770 /efs/imei
 
 # permissions for bluetooth.
     chown bluetooth bluetooth /dev/s3c2410_serial0
@@ -58,86 +72,27 @@ on fs
     chmod 660 /sys/class/sec/uart_switch/UART_SEL/value
 
 on post-fs
+    # We chown/chmod /datadata again so because mount is run as root + defaults
+    chown system system /datadata
+    chmod 0771 /datadata
 
-# for sensor control
-    chown root input /sys/class/input/input0/enable
-    chown root input /sys/class/input/input0/delay
-    chown root input /sys/class/input/input0/wake
-    chown root input /sys/class/input/input0/data
-    
-    chown root input /sys/class/input/input1/enable
-    chown root input /sys/class/input/input1/delay
-    chown root input /sys/class/input/input1/wake
-    chown root input /sys/class/input/input1/threshold
-    chown root input /sys/class/input/input1/distortion
-    chown root input /sys/class/input/input1/shape
-    chown root input /sys/class/input/input1/offsets
-    chown root input /sys/class/input/input1/filter_enable
-    chown root input /sys/class/input/input1/filter_len
-    chown root input /sys/class/input/input1/data
-    chown root input /sys/class/input/input1/status
-    chown root input /sys/class/input/input1/position
-    
-    chown root input /sys/class/input/input2/enable
-    chown root input /sys/class/input/input2/delay
-    chown root input /sys/class/input/input2/wake
-    chown root input /sys/class/input/input2/threshold
-    chown root input /sys/class/input/input2/distortion
-    chown root input /sys/class/input/input2/shape
-    chown root input /sys/class/input/input2/offsets
-    chown root input /sys/class/input/input2/filter_enable
-    chown root input /sys/class/input/input2/filter_len
-    chown root input /sys/class/input/input2/data
-    chown root input /sys/class/input/input2/status
-    chown root input /sys/class/input/input2/position
-    
-    chown root input /sys/class/input/input3/enable
-    chown root input /sys/class/input/input3/delay
-    chown root input /sys/class/input/input3/wake
-    chown root input /sys/class/input/input3/threshold
-    chown root input /sys/class/input/input3/distortion
-    chown root input /sys/class/input/input3/shape
-    chown root input /sys/class/input/input3/offsets
-    chown root input /sys/class/input/input3/filter_enable
-    chown root input /sys/class/input/input3/filter_len
-    chown root input /sys/class/input/input3/data
-    chown root input /sys/class/input/input3/status
-    chown root input /sys/class/input/input3/position
-    
-    chown root input /sys/class/input/input4/enable
-    chown root input /sys/class/input/input4/delay
-    chown root input /sys/class/input/input4/wake
+    #symlinks for samsung RIL
+    symlink /radio/modem.bin /dev/block/bml12
 
-    chown root input /sys/class/input/input5/enable
-    chown root input /sys/class/input/input5/delay
-    chown root input /sys/class/input/input5/wake
-
-    chown root input /sys/class/input/input6/enable
-    chown root input /sys/class/input/input6/delay
-    chown root input /sys/class/input/input6/wake
-
-    chown root input /sys/class/input/input7/enable
-    chown root input /sys/class/input/input7/delay
-    chown root input /sys/class/input/input7/wake
-
-    chown root input /sys/class/input/input8/enable
-    chown root input /sys/class/input/input8/delay
-    chown root input /sys/class/input/input8/wake
-
-    chown root input /sys/class/input/input9/enable
-    chown root input /sys/class/input/input9/delay
-    chown root input /sys/class/input/input9/wake
-
-    chown root input /dev/i2c-12
+# allow system to modify cpufreq control files
+    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
 on post-fs-data
+    # for migrating download provider's cache out of the small /data/data
+    mkdir /data/data2 0771 system system
 
-# create data/gps for GPS demon
-    mkdir /data/gps 771 gps system
-    chown gps system /data/gps
-    chmod 771 /data/gps
-    chown gps root /sys/class/sec/gps/GPS_PWR_EN/value
-    chmod 660 /sys/class/sec/gps/GPS_PWR_EN/value
+    # setup datadata
+    exec /sbin/setupdatadata.sh
 
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
@@ -146,10 +101,11 @@ on post-fs-data
     # download cache
     mkdir /data/download 0770 system cache
 
-    setprop vold.post_fs_data_done 1
+    # logs
+    mkdir /data/log 0775 root root
+    chmod 0775 /data/log
 
-#boot-patch
-exec /sbin/boot-patch.sh
+    setprop vold.post_fs_data_done 1
 
 service aries-ril-daemon /system/bin/rild
     class core
@@ -179,26 +135,26 @@ service pvrsrvinit /system/vendor/bin/pvrsrvinit
 #   oneshot
 
 service p2p_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
-    class main
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
-    oneshot
+	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
+	#   we will start as root and wpa_supplicant will switch to user wifi
+	#   after setting up the capabilities required for WEXT
+	#   user wifi
+	#   group wifi inet keystore
+	class main
+	socket wpa_wlan0 dgram 660 wifi wifi
+	disabled
+	oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
-    class main
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
-    oneshot
+	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
+	#   we will start as root and wpa_supplicant will switch to user wifi
+	#   after setting up the capabilities required for WEXT
+	#   user wifi
+	#   group wifi inet keystore
+	class main
+	socket wpa_wlan0 dgram 660 wifi wifi
+	disabled
+	oneshot
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -aABKL
     class main
@@ -230,6 +186,15 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
+service bdaddr /system/bin/bdaddr_read
+    class main
+    user root
+    disabled
+    oneshot
+
+on property:init.svc.bootanim=running
+    start bdaddr
+
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
     --baudrate 3000000 --patchram /vendor/firmware/bcm4329.hcd /dev/s3c2410_serial0
     class main
@@ -244,30 +209,26 @@ service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
     disabled
     oneshot
     keycodes 114 115 116
-    
-service pppd_cdma /system/bin/pppd_runner
-    class main
-    user root
-    group radio cache inet misc system
-    disabled
-    oneshot
 
 service orientationd /system/vendor/bin/orientationd
-    class main
+    class late_start
     user compass
     group system input
+    disabled
 
 service geomagneticd /system/vendor/bin/geomagneticd
-    class main
+    class late_start
     user compass
     group system input
 
-service gpsd /system/vendor/bin/gpsd
-    class main
-    user system
-    group system inet
-
 service tvout /system/bin/tvoutserver
-    class main
-    user root
-    group root
+    class late_start
+    user system
+    group graphics
+    disabled
+# FIXME (disabled): ABI borked
+
+service tvouthack /system/bin/tvouthack
+    user system
+    group graphics
+    disabled
