--- a/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
@@ -17,13 +17,11 @@ on init
     symlink /storage/sdcard1 /emmc
     symlink /storage/sdcard1 /mnt/emmc
     # FIXME: Remove emmc?
+    mkdir /datadata 0771 system system
 
     # Increase read ahead on moviNAND
     write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
-	
-    # Disable address randomization
-    write /proc/sys/kernel/randomize_va_space 0
-	
+
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
     stop ril-daemon
@@ -48,6 +46,7 @@ on fs
     mkdir /radio 0775 radio radio
     mount yaffs2 mtd@radio /radio
     mount_all fstab.aries
+    mount yaffs2 mtd@datadata /datadata
 
     chown radio radio /radio/modem.bin
 
@@ -73,6 +72,9 @@ on fs
     chmod 660 /sys/class/sec/uart_switch/UART_SEL/value
 
 on post-fs
+    # We chown/chmod /datadata again so because mount is run as root + defaults
+    chown system system /datadata
+    chmod 0771 /datadata
 
     #symlinks for samsung RIL
     symlink /radio/modem.bin /dev/block/bml12
@@ -86,18 +88,16 @@ on post-fs
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
 on post-fs-data
+    # for migrating download provider's cache out of the small /data/data
+    mkdir /data/data2 0771 system system
+
+    # setup datadata
+    exec /sbin/setupdatadata.sh
 
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
-	
-    # Dalvik cache on /system to save space
-    mkdir /system/dalvik-cache 0771 system system
-    chown system system /system/dalvik-cache
-    chmod 0771 /system/dalvik-cache
-    exec /system/bin/rm -r /data/dalvik-cache
-    symlink /system/dalvik-cache /data/dalvik-cache
-	
+
     # download cache
     mkdir /data/download 0770 system cache
 
@@ -106,9 +106,6 @@ on post-fs-data
     chmod 0775 /data/log
 
     setprop vold.post_fs_data_done 1
-
-#boot-patch
-exec /sbin/boot-patch.sh
 
 service aries-ril-daemon /system/bin/rild
     class core
@@ -198,6 +195,8 @@ service bdaddr /system/bin/bdaddr_read
 
 on property:init.svc.bootanim=running
     start bdaddr
+
+# The Froyo RIL won't work for some without being started later.
     start aries-ril-daemon
 
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
@@ -237,6 +236,3 @@ service tvouthack /system/bin/tvouthack
     user system
     group graphics
     disabled
-
-on property:dev.bootcomplete=1
-	start tvout
