--- a/usr/fascinatemtd_initramfs/jb_init/init.aries.gps.rc
+++ b/usr/fascinatemtd_initramfs/jb_init/init.aries.gps.rc
@@ -4,15 +4,15 @@
 # conflicting with the default GPS init. (i.e. Vibrant)
 #
 
-service gpsd /system/vendor/bin/gpsd -c /vendor/etc/gps.xml
-    class late_start
-    socket gps seqpacket 0660 gps system
-    user gps
+service gpsd /system/vendor/bin/gpsd
+    class main
+    user system
     group system inet
 
 on post-fs-data
-    # create data/gps for GPS demon
-    mkdir /data/gps 700 gps system
+# create data/gps for GPS demon
+    mkdir /data/gps 771 gps system
     chown gps system /data/gps
+    chmod 771 /data/gps
     chown gps root /sys/class/sec/gps/GPS_PWR_EN/value
     chmod 660 /sys/class/sec/gps/GPS_PWR_EN/value
