--- a/usr/galaxysbmtd_initramfs/jb_init/init.aries.gps.rc
+++ b/usr/galaxysbmtd_initramfs/jb_init/init.aries.gps.rc
@@ -5,7 +5,7 @@
 #
 
 service gpsd /system/vendor/bin/gpsd -c /vendor/etc/gps.xml
-    class late_start
+    class main
     socket gps seqpacket 0660 gps system
     user gps
     group system inet
