--- a/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
@@ -246,21 +246,19 @@ service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
     oneshot
     keycodes 114 115 116
 
+service orientationd /system/vendor/bin/orientationd
+    class main
+    user compass
+    group system input
+    disabled
+
 service geomagneticd /system/vendor/bin/geomagneticd
     class main
     user compass
     group system input
     
-
-service orientationd /system/vendor/bin/orientationd
-    class late_start
-    user compass
-    group system input
-    disabled
-
-
 service tvout /system/bin/tvoutserver
-    class late_start
+    class main
     user system
     group graphics
     disabled
