--- a/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
@@ -100,7 +100,7 @@ on post-fs-data
     # setup datadata
     exec /sbin/setupdatadata.sh
 
-    #boot-patch
+    # boot-patch
     exec /sbin/boot-patch.sh
 
     # wi-fi
@@ -222,18 +222,18 @@ service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
     keycodes 114 115 116
 
 service orientationd /system/vendor/bin/orientationd
-    class main
+    class late_start
     user compass
     group system input
     disabled
 
 service geomagneticd /system/vendor/bin/geomagneticd
-    class main
+    class late_start
     user compass
     group system input
 
 service tvout /system/bin/tvoutserver
-    class main
+    class late_start
     user system
     group graphics
 
